updated tall grass page

--- a/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
+++ b/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
@@ -12,20 +12,16 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Tall Grass Should Be Left After Mowing">
   <meta property="og:description" content="Residual grass height after mowing determines photosynthetic capacity, carbohydrate supply, root depth, and tolerance to heat and moisture stress.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -41,21 +37,9 @@
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <!-- On-site search (autocomplete; never leaves your site) -->
     <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
+      <input id="siteSearch" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
+      <div id="searchResults" class="search-results"></div>
     </div>
   </header>
 
@@ -68,7 +52,7 @@
 
 <h2>Leaf area, photosynthesis, and recovery dynamics</h2>
 <p>Photosynthetic output increases with leaf surface area and light interception, so taller residual height supports higher daily carbohydrate production. This surplus allows the plant to replace leaf tissue after mowing while still allocating energy to roots and storage. Recovery is faster, which shortens the period during which the lawn is physiologically exposed to additional stress. The canopy essentially determines how quickly the plant can return to a stable energy state.</p>
-<p>When residual height is low, carbohydrate production is constrained while respiration continues, shrinking the surplus available for growth. Recovery slows and the lawn remains in a deficit window longer, which makes other stresses more consequential than they would be in a surplus state. That sensitivity is predictable because the plant is operating with reduced capacity, unlike , where the limiting factor is different even if the symptom can look similar. The difference matters because the same external conditions produce larger effects when the internal energy margin is small.</p>
+<p>When residual height is low, carbohydrate production is constrained while respiration continues, shrinking the surplus available for growth. Recovery slows and the lawn remains in a deficit window longer, which makes other stresses more consequential than they would be in a surplus state. That sensitivity is predictable because the plant is operating with reduced capacity, unlike <a href="what-type-of-grass-do-i-have.html">What Type of Grass Do I Have</a>, where the limiting factor is different even if the symptom can look similar. The difference matters because the same external conditions produce larger effects when the internal energy margin is small.</p>
 
 <h2>Root structure and nutrient uptake stability</h2>
 <p>Root systems are supported by carbohydrates produced in the leaves, so sustained canopy height influences root mass and depth over time. Taller residual height typically promotes deeper rooting because energy supply remains adequate for root growth and maintenance. Deeper roots access a larger soil volume, stabilizing water availability and nutrient uptake across weather fluctuations. This structural stability reduces the likelihood of abrupt performance swings during short stress events.</p>
@@ -80,7 +64,7 @@
 
 <h2>Soil temperature buffering and moisture retention</h2>
 <p>A taller canopy shades the soil surface, reducing temperature extremes in the root zone and slowing evaporation. This buffering preserves root function and moderates midday stress, particularly in exposed sites. Soil conditions remain more stable between watering or rainfall events, which supports consistent uptake and growth. The canopy acts as a physical moderator of the root environment as much as it acts as a photosynthetic surface.</p>
-<p>Shorter canopies allow more radiation to reach the soil, increasing heat load and accelerating drying. Rapid wet-dry cycling can impair gas exchange and reduce root performance even when total water input is sufficient. These effects are often most visible near heat-reflecting surfaces, such as , where the root zone experiences higher daily thermal stress. When the soil environment is less stable, small mismatches in water timing translate into larger physiological swings.</p>
+<p>Shorter canopies allow more radiation to reach the soil, increasing heat load and accelerating drying. Rapid wet-dry cycling can impair gas exchange and reduce root performance even when total water input is sufficient. These effects are often most visible near heat-reflecting surfaces, such as <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a>, where the root zone experiences higher daily thermal stress. When the soil environment is less stable, small mismatches in water timing translate into larger physiological swings.</p>
 
 <h2>Mechanical stress and recovery capacity</h2>
 <p>Traffic and mowing impose repeated mechanical stress on turf, requiring continual repair of leaf tissue and protection of the crown. Taller residual height improves recovery capacity by leaving more photosynthetic tissue after disturbance and by providing more canopy buffer above the crown. That buffer reduces the chance that mechanical disturbance becomes direct crown exposure. Recovery capacity is therefore a product of both energy supply and physical protection.</p>
@@ -88,7 +72,7 @@
 
 <h2>Conclusion</h2>
 <p>Residual mowing height controls leaf area, which governs photosynthesis and carbohydrate supply for roots, crowns, and regrowth. Taller canopies generally provide a larger energy margin, deeper roots, and more stable soil temperature and moisture conditions. Shorter canopies reduce that margin, increasing sensitivity to heat, drought, and mechanical stress even if the lawn appears acceptable immediately after mowing. The dominant pathway is energy balance expressed through root structure and crown protection.</p>
-<p>The long-term outcome depends on whether the plant consistently operates in surplus or repeatedly falls into deficit after each cut. Because multiple physiological and physical systems respond together, mowing height influences color stability, density, and recovery speed through connected pathways rather than isolated effects. When the margin is large, stress events are buffered and recovery is faster; when the margin is small, the same events produce visible decline. Height decisions therefore function as long-run stability choices rather than short-run appearance choices.</p>
+<p>The long-term outcome depends on whether the plant consistently operates in surplus or repeatedly falls into deficit after each cut. Because multiple physiological and physical systems respond together, mowing height influences color stability, density, and recovery speed through connected pathways rather than isolated effects. Lawns can survive extended stress, but adaptation has limits, as explained in <a href="can-grass-adapt-to-neglect.html">Can Grass Adapt to Neglect</a>. When the margin is large, stress events are buffered and recovery is faster; when the margin is small, the same events produce visible decline.</p>
   </main>
 
   <footer class="site-footer">
@@ -101,7 +85,6 @@
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
