updated same dam article

--- a/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
+++ b/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
@@ -5,23 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Tall Grass Should Be Left After Mowing</title>
-  <meta name="description" content="How much grass you leave after mowing affects how your lawn looks, recovers, and handles heat, foot traffic, and dry conditions.">
+  <meta name="description" content="Mowing height affects how fast grass fills back in, how it handles heat and foot traffic, and how often thin or brown spots show up.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Tall Grass Should Be Left After Mowing">
-  <meta property="og:description" content="How much grass you leave after mowing affects how your lawn looks, recovers, and handles heat, foot traffic, and dry conditions.">
+  <meta property="og:description" content="Mowing height affects how fast grass fills back in, how it handles heat and foot traffic, and how often thin or brown spots show up.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
+  <!-- Google tag -->
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -37,9 +43,21 @@
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
+    <!-- On-site search (autocomplete; never leaves your site) -->
     <div class="search-wrap" role="search">
-      <input id="siteSearch" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
-      <div id="searchResults" class="search-results"></div>
+      <input
+        id="siteSearch"
+        class="search"
+        type="search"
+        placeholder="Search GrizzlyGreens..."
+        autocomplete="off"
+        autocapitalize="off"
+        spellcheck="false"
+        aria-label="Search GrizzlyGreens"
+        aria-expanded="false"
+        aria-controls="searchResults"
+      >
+      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
     </div>
   </header>
 
@@ -47,32 +65,32 @@
     <h1>How Tall Grass Should Be Left After Mowing</h1>
 
 <h2>Residual height as an energy control</h2>
-<p>The height you leave after mowing decides how well your lawn handles the days that follow. Leaving more grass gives the lawn more surface to work with, which helps it bounce back faster after being cut. When grass is left too short, it struggles longer before it looks normal again. That difference shows up most during hot or dry weather.</p>
-<p>This means mowing height affects how your lawn behaves, not just how it looks. Some grasses handle shorter cuts better than others, but all lawns recover faster when they are not shaved down. Problems usually show up later, not right after mowing, which is why short cuts often seem fine at first.</p>
+<p>The height left after mowing decides how well the lawn holds up between cuts. Leaving grass a bit taller usually keeps it looking fuller and more even. Cutting it too short often leads to thin spots that show up a few days later.</p>
+<p>Mowing height is also one of the easiest things to control week to week. A small change up or down can make a noticeable difference in how the yard looks. A yard that stays consistently a little taller usually needs fewer “fixes” later.</p>
 
 <h2>Leaf area, photosynthesis, and recovery dynamics</h2>
-<p>Grass that is left taller after mowing fills back in quicker and looks healthier between cuts. It doesn’t stay thin or stressed for as long, so bare spots are less likely to form. The lawn simply has more room to recover before the next mow.</p>
-<p>When grass is cut too short, recovery slows and weak spots become more obvious. Heat, foot traffic, and missed watering have a bigger effect during that slow period. Some problems look similar on the surface, but they come from different causes depending on the grass type. (What Type of Grass Do I Have.)</p>
+<p>When grass is left with enough height, it fills back in faster after mowing. It also hides small rough patches better, so the yard looks cleaner longer. That keeps mowing from turning into a constant cycle of damage and repair.</p>
+<p>When grass is cut too short, it tends to look good for a day and then start fading or thinning. Heat and missed watering hurt more during that time. Picking the right height depends on what kind of grass is in the yard, and <a href="what-type-of-grass-do-i-have.html">What Type of Grass Do I Have</a> helps sort that out.</p>
 
 <h2>Root structure and nutrient uptake stability</h2>
-<p>Lawns that are mowed higher tend to stay more even in color and thickness through changing conditions. They hold up better during short dry spells and don’t show stress as quickly. This gives the lawn a steadier look over the season.</p>
-<p>Short-cut lawns dry out faster and react more strongly to uneven watering. Yellowing or thin patches can appear even when fertilizer has been applied. Those issues usually fade only after the grass has time to grow back to a healthier height.</p>
+<p>Lawns that are mowed a bit higher usually stay steadier in color and thickness. They handle short dry spells better and don’t get patchy as quickly. This is especially noticeable in sunny yards.</p>
+<p>Short mowing makes the yard more touchy about watering and feeding. It can go dull or thin even when fertilizer is being used. Raising the mowing height often improves the look more than adding extra product.</p>
 
 <h2>Respiration demand and temperature sensitivity</h2>
-<p>Hot weather makes mowing height more important than it seems. A lawn cut too short in summer often looks fine for a few days, then starts thinning or losing color. Taller grass handles heat better and stays more consistent between cuts.</p>
-<p>During cooler weather, the difference between short and moderate mowing may not stand out much. In heat, that same difference can decide whether the lawn stays full or starts struggling. Once stress builds up, it takes longer to recover.</p>
+<p>Hot weather is where mowing height starts to matter most. A short-cut lawn often struggles during a heat wave and can turn uneven fast. A higher cut usually stays greener and thicker through the same stretch.</p>
+<p>In mild weather, short cuts can seem fine because the yard isn’t under as much pressure. In heat, the same cut can lead to thinning that takes weeks to grow out. Keeping the mower higher in summer is one of the simplest ways to reduce problems.</p>
 
 <h2>Soil temperature buffering and moisture retention</h2>
-<p>Taller grass shades the soil and helps it stay cooler and damp longer. That keeps the ground from drying out too fast and reduces stress during sunny afternoons. Watering also becomes more effective because moisture sticks around longer.</p>
-<p>Very short grass lets heat hit the soil directly and dry it out faster. This is most noticeable near concrete and asphalt where heat builds up quickly. (Why Grass Dies Along Driveways.)</p>
+<p>Grass that is left taller shades the soil and helps it hold moisture longer. That means less drying between waterings and fewer stressed areas. It also makes the yard look better on the hottest afternoons.</p>
+<p>When grass is cut very short, the ground heats up faster and dries out quicker. This is often worst along sidewalks, driveways, and curbs where heat builds up. If the edge strip keeps dying back, <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains the common causes.</p>
 
 <h2>Mechanical stress and recovery capacity</h2>
-<p>Walking, mowing, and regular use all wear on a lawn. Leaving more height after mowing helps the grass handle that wear and fill back in before damage adds up. It also gives a bit of cushion above the base of the grass where damage is hardest to fix.</p>
-<p>Short grass shows wear sooner and takes longer to recover from traffic. Thin spots tend to grow when stress overlaps before the lawn has time to bounce back. Over time, this leads to patchy areas in busy parts of the yard.</p>
+<p>Foot traffic, pets, and mower wheels all wear on a yard over time. Leaving more height helps the lawn handle that wear without showing it as quickly. It also makes ruts and scuffs less obvious.</p>
+<p>Short grass shows damage faster and takes longer to thicken back up. Busy areas can start looking thin because they never get a chance to recover. A slightly higher cut often improves those zones without changing anything else.</p>
 
 <h2>Conclusion</h2>
-<p>Mowing height affects how your lawn looks, how fast it recovers, and how well it handles heat, drought, and use. Taller cuts usually lead to deeper color, thicker growth, and fewer problem areas. Short cuts increase stress even if the lawn looks neat right after mowing.</p>
-<p>What matters most is whether the lawn keeps getting enough time to recover between cuts. Some lawns can tolerate rough treatment for a while, but there is a limit. (Can Grass Adapt to Neglect.) When grass is consistently left too short, decline becomes hard to avoid.</p>
+<p>Residual mowing height affects how the lawn looks, how quickly it fills back in, and how well it handles summer conditions. A taller cut usually means fewer thin spots and a more even yard. A very short cut often trades short-term neatness for longer-term problems.</p>
+<p>The best results come from sticking with a height the yard can handle week after week. Letting it get stressed repeatedly tends to show up as thinning that takes time to fix. If maintenance gets skipped for long stretches, <a href="can-grass-adapt-to-neglect.html">Can Grass Adapt to Neglect</a> lays out what typically happens.</p>
   </main>
 
   <footer class="site-footer">
@@ -85,6 +103,8 @@
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <script src="/search.js"></script>
+  <!-- This must exist at /search.js in your repo root -->
+   <script src="/search.js"></script>
 </body>
 </html>
+<!-- :contentReference[oaicite:0]{index=0} -->
